--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,16 @@ dependencies:
   flutter_screenutil: ^5.6.0
   qr_flutter: ^4.0.0
   pdf: ^3.6.4
+  retrofit: ^3.0.1
+  dio: ^4.0.4
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.7
+  built_value_generator: ^8.1.4
+  retrofit_generator: ^4.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
