--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "antry_admin",
-    "short_name": "antry_admin",
+    "name": "Antry",
+    "short_name": "Antry",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
